docs/tests/nameres/control_flow/valid/WhileExpr.src
// Valid

fn void main() {
    let int i = 3;
    while ( i += 3 ) {
       let int j = 3; 
    }
}