docs/tests/nameres/control_flow/invalid/WhileOutOfScope.src
// Invalid 

fn void main() {
    while (1) {
        let int j = 1;
    }

    while (1) {
        j = 3;
    }
}